--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width,intial-scale=1.0">
 <link rel="stylesheet" href="css/styles.css">
 <header class="background">
   <h1 id="top">Cody Keenan</h1>
@@ -22,27 +22,41 @@
   <div class="row">
       <div class="col1">
         <body class="background">
+          <div class="portfolio1">
               <h2 class="portfolio" id="portfolio">Portfolio</h2>
                 <image src="images/portfolio-1.png" alt="Place image folders"  class="center primary">
+          </div>
+          <div class="marketing">
               <h3 class="heading primary">Marketing</h3>
                   <p class="introduction primary">This is a home page of a marketing website for a client that specializes in a field that interests me.</p>
                 <image src="images/portfolio-2.png" alt="Place image graphs"   class="center primary ">
+          </div>
+          <div class="search">
               <h4 class="heading primary">Search Page</h4>
                   <p class="introduction primary">This search page cuts down the research time by searching through specific databases for your related information.</p>
                 <img src="images/portfolio-3.png" alt="Place image search"   class="center secondary">
+          </div>
+          <div class="travel">
               <h5 class="heading secondary">Travel App</h5>
                   <p class="introduction secondary">This app will help you choose the quickest route to your destination across many modes of transportation.</p>
+          </div>
       </div>
       <div class="col2">
-                <img src="images/portfolio-4.png" alt="Place image gps"  class="center secondary ">
+          <div class="gps">
+              <img src="images/portfolio-4.png" alt="Place image gps"  class="center secondary ">
               <h6 class="heading secondary">Map of Favorite Spots</h6>
               <p class="introduction secondary">By using this app you can save your favorite spots on a map. Making it easier to plan for your next journey.</p>
+          </div>
+          <div class="gallery">
               <img src="images/portfolio-5.png" alt="Place image gallery"   class="center last ">
               <p class="heading last">Photo Gallery</p>
-                  <p class="introduction last">You can easily navigate through photos of recent trips taken by other users.</p>
+              <p class="introduction last">You can easily navigate through photos of recent trips taken by other users.</p>
+          </div>
+          <div class="calculator">
                 <img src="images/portfolio-6.png" alt="Place image Calculator" class="center last">
-              <p class="heading last ">Calculator</p>
-                  <p class="introduction last">Enter your equation and tap the blue button to get the answer.</p>
+                <p class="heading last ">Calculator</p>
+                <p class="introduction last">Enter your equation and tap the blue button to get the answer.</p>
+          </div>
       </div>
     </div>
     </section>
