--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <meta name="viewport" content="width=device-width,intial-scale=1.0">
 <link rel="stylesheet" href="css/styles.css">
+<head>
   <title>Cody's Portfolio</title>
 <body class="background">
-  <header>
     <h1 id="top">Cody Keenan</h1>
       <nav>
         <ul class="main-nav">
@@ -19,7 +19,7 @@
     <div class="statement">
       <p class="introduction">Hello! I'm a front-end developer student that enjoys being creative and applying responsive properties to a website. I look forward to acquiring more skills.</p>
     </div>
-  </header>
+  </head>
   <section>
     <div class="row">
         <div class="col1">
@@ -68,6 +68,11 @@
           <p class="contact"><a href="mailto:johnsmith000@example.com">johnsmith000@example.com</a></p>
           <p class="student">Cody</p>
           <p class="backtotop"><a href="#top">Back to Top</a></p>
+           <ul class="bottom-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+           </ul>
         </footer>
   </body>
 </html>
