--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta name="viewport" content="width=device-width,intial-scale=1.0">
 <link rel="stylesheet" href="css/styles.css">
-<head>
-  <title>Cody's Portfolio</title>
+    <title>Cody's Portfolio</title>
+</head>
 <body class="background">
-    <h1 id="top">Cody Keenan</h1>
-      <nav>
-        <ul class="main-nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        </nav>
-    <div class="opening">
-      <img src="images/responsive-layout-profile.png" alt="Place Profile image"  class="center">
-    </div>
-    <div class="statement">
-      <p class="introduction">Hello! I'm a front-end developer student that enjoys being creative and applying responsive properties to a website. I look forward to acquiring more skills.</p>
-    </div>
-  </head>
-  <section>
+      <h1 id="top">Cody Keenan</h1>
+        <nav>
+          <ul class="main-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          </nav>
+      <div class="opening">
+        <img src="images/responsive-layout-profile.png" alt="Place Profile image"  class="center">
+      </div>
+      <div class="statement">
+        <p class="introduction">Hello! I'm a front-end developer student that enjoys being creative and applying responsive properties to a website. I look forward to acquiring more skills.</p>
+      </div>
+
+  <div class="section">
     <div class="row">
         <div class="col1">
             <div class="portfolio1">
@@ -60,7 +61,8 @@
             </div>
         </div>
       </div>
-      </section>
+    </div>
+
       <footer>
         <p class="heading" id="contact">Contact</p>
           <p class="introduction">If you are interested in more information or would like to see more from my portfolio. Feel free to contact me!</p>
